Paint brush (sculpt mode) has no ctrl-switch #81670

Closed
opened 2020-10-13 12:17:53 +02:00 by user1 · 6 comments

System Information
Operating system: Linux-5.4.0-48-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GT 630/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.138

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-12 22:51, hash: dc71ad0624
Worked: (newest version of Blender that worked as expected)

Short description of error
I expected the two colors of the paint brush inside the sculpt mode to be switchable with the Ctrl-button, but they aren't.

Exact steps for others to reproduce the error

Open a sculpt session and chose the paint brush.
Determine two colors in the brush settings.
Start painting with one color.
Try to switch to the second color with Ctrl.

Bildschirmfoto zu 2020-10-13 12-07-10.png

**System Information** Operating system: Linux-5.4.0-48-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GT 630/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.138 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-12 22:51, hash: `dc71ad0624` Worked: (newest version of Blender that worked as expected) **Short description of error** I expected the two colors of the paint brush inside the sculpt mode to be switchable with the Ctrl-button, but they aren't. **Exact steps for others to reproduce the error** Open a sculpt session and chose the paint brush. Determine two colors in the brush settings. Start painting with one color. Try to switch to the second color with Ctrl. ![Bildschirmfoto zu 2020-10-13 12-07-10.png](https://archive.blender.org/developer/F8985857/Bildschirmfoto_zu_2020-10-13_12-07-10.png)
Author

Added subscriber: @user1

Added subscriber: @user1
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-10-13 15:16:20 +02:00
Member

Not a bug, more of a TODO, but we should do this for the sake of consistency.
Will put on my desk.

Not a bug, more of a TODO, but we should do this for the sake of consistency. Will put on my desk.

This issue was referenced by 5f49f818d6

This issue was referenced by 5f49f818d6282a2f421f454bb32b2a6b2c9a0a0d
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81670
No description provided.