Fixes T81670: Sculpt paint vertex colors brush does not switch to secondary color using CTRL

This was just not implemented. Now make this consistent with
vertexpainting / texturepainting.

Maniphest Tasks: T81670

Differential Revision: https://developer.blender.org/D9195